[package]
name = "cloudflare-api"
version = "0.0.1"
edition = "2024"
description = "An unofficial Cloudflare API Client in Rust"
license = "MIT OR Apache-2.0"
authors = ["AprilNEA <github@sku.moe>"]
repository = "https://github.com/AprilNEA/cloudflare-api"

[dependencies]
progenitor-client = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono"] }

[build-dependencies]
progenitor = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
openapiv3 = "2.0"
